--- a/apps/gui/app/style/components/index.scss
+++ b/apps/gui/app/style/components/index.scss
@@ -2,7 +2,7 @@
 @import "stream/index";
 
 @import "line-chart";
-@import "pcap-uploader";
+@import "file-uploader";
 @import "streams";
 @import "top-nav";
 @import "statistic-panel";
