gui: let the mouse interact with video timeline
- click on a frame to select it as current
- click on progress bar to move along the timeline
- converting React component to useState stuff breaks the arrow key binding.

--- a/apps/gui/app/style/containers/_stream.scss
+++ b/apps/gui/app/style/containers/_stream.scss
@@ -4,7 +4,7 @@
         width: 100%;
     }
     &.selected {
-        border-bottom: 4px solid $blue;
+        border: 2px solid $blue;
     }
 }
 
@@ -51,7 +51,7 @@
         background: $nord1;
     }
     .lst-timeline-progress {
-        height: 4px;
+        height: 16px;
         background-color: $blue;
         transition: $fast-transition-time width;
     }
