--- a/apps/gui/app/style/containers/_stream.scss
+++ b/apps/gui/app/style/containers/_stream.scss
@@ -1,4 +1,23 @@
-.lst-stream-timeline-image {
+.lst-video-timeline {
+    display: flex;
+    .prev, .next {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        height: 100%;
+        cursor: pointer;
+        color: black;
+        transition: 0.6s ease;
+    }
+    .wrapper {
+        overflow-x: auto;
+        overflow-y: hidden;
+        .row {
+            flex-wrap: nowrap;
+        }
+    }
+}
+
+.lst-video-timeline-image {
     padding: 0;
     img {
         width: 100%;
@@ -41,19 +60,6 @@
     .dark & {
         background: $nord1;
         color: $white-perl;
-    }
-}
-
-.lst-timeline-bar {
-    padding: 2px;
-    background: $grey;
-    .dark & {
-        background: $nord1;
-    }
-    .lst-timeline-progress {
-        height: 16px;
-        background-color: $blue;
-        transition: $fast-transition-time width;
     }
 }
 
