ui: fix inconstencies in stream comparison display

--- a/apps/gui/app/style/containers/_stream.scss
+++ b/apps/gui/app/style/containers/_stream.scss
@@ -1,5 +1,6 @@
 .lst-video-timeline {
     display: flex;
+    max-width: 100%;
     .prev, .next {
         padding-top: 10px;
         padding-bottom: 10px;
